Revert "Add support for appCds type in QuarkusIntegrationTest"
This reverts commit a0f4d30b9925ef73fd196d4a9e2fb5bdf3b77081.

(cherry picked from commit 23a10de9fed02b4507e782c111fc16c82a64d327)